Revision history for Perl module TestRail::API

0.037 2016-04-?? TEODESIAN
    - Fix incorrect POD for TestRail::API::createRunInPlan

0.036 2016-04-25 TEODESIAN
    - Fix using wrong perl during testsuite when running binaries
    - Silence testsuite for easier diagnosis of issues
    - Fix warnings due to undef comparison in TestRail::Utils::Find
    - Change to using Pod::Usage for help output rather than Pod::Perldoc

0.035 2016-04-23 TEODESIAN
    - Fix testrail-report and testrail-cases broken binary arg passing
    - Fix issue where TODO PASS was reported in tests with TODO FAILs.
    - Fix issue where TODO FAILED steps were reported as TODO PASS.
    - Fix issue where the value of the step_results field was ignored by Test::Rail::Parser
    - Fix issue where Test::Rail::Parser would truncate results in non case-per-ok mode
    - Remove case_per_ok feature from Test::Rail::Parser, never really worked it turns out

0.034 2016-02-18 TEODESIAN
    - Use Capture::Tiny rahter than IO::CaptureOutput in unit tests
    - Allow users to signal Test::Rail::Parser to set a custom status
    - Fix issue where todo_pass would be marked even when a bad plan occurred
    - Add functions for TestRail 5.2 add/update/remove configurations & groups
    - Add bad plan step_result and a comment when not in case_per_ok & bad plan detected
    - Add bailout step_result and a comment when not in case_per_ok & bailout detected

0.033 2016-01-06 TEODESIAN
    - Fix issue where running TestRail::Parser with multiple -j in prove corrupted results
    - Add timestamps to every step reported for better test bottleneck detection

0.032 2015-08-31 TEODESIAN
    - Fix issue in getCases where arrayref filters were not handled properly
    - Add TestRail::API::typeNamesToIds
    - Add orphans option to testrail-tests, TestRail::Utils::Find::getTests
    - Add TestRail::API::updateCase
    - Add new TestRail::Utils::Find functions; getCases, findCases
    - Add new script bin/testrail-cases