@@ -1,6 +1,6 @@
 name = TestRail-API
 main_module = lib/TestRail/API.pm
-version = 0.036
+version = 0.037
 author = George S. Baugh <teodesian@cpan.org>
 license = Perl_5
 copyright_holder = George S. Baugh
@@ -126,6 +126,8 @@ stopwords = getPlanSummary
 stopwords = getRunSummary
 stopwords = judgements
 stopwords = bailoutCallback
+stopwords = findResults
+stopwords = cachefile
 
 [PkgVersion]
 [AutoPrereqs]
