@@ -2,6 +2,7 @@ Revision history for Perl module TestRail::API
 
 0.037 2016-04-?? TEODESIAN
     - Fix incorrect POD for TestRail::API::createRunInPlan
+    - Add testrail-results binary and TestRail::Utils::Find::getResults.
 
 0.036 2016-04-25 TEODESIAN
     - Fix using wrong perl during testsuite when running binaries
